# starnose

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
Formula/: starnose.rb
examples/: test_agent.py  test_mitm.py
scripts/: install.sh  update-homebrew.sh
starnose/: __init__.py  certs.py  cli.py  db.py  hypotheses.py  mitm.py  proxy.py  sdk.py  tokens.py
starnose/integrations/: __init__.py  anthropic_patch.py  langchain.py  openai_patch.py
starnose/tui/: diff.py  inspect.py  stats.py  watch.py
tests/: test_db.py  test_hypotheses.py  test_proxy.py  test_tokens.py
