[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starnose"
version = "0.1.0"
description = "See exactly what your agent sees. Context window observability for LLM agents."
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
  { name = "Eitan Lebras" },
]
keywords = ["llm", "agents", "observability", "context-window", "tokens", "openai", "anthropic", "claude"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Testing",
]

dependencies = [
  "typer>=0.12",
  "textual>=0.60",
  "rich>=13",
  "tiktoken>=0.7",
  "httpx>=0.27",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "anthropic>=0.28",
  "openai>=1.30",
  "python-dotenv>=1.0",
  "cryptography>=42.0",
]

[project.urls]
Homepage = "https://github.com/eitanlebras/starnose"
Repository = "https://github.com/eitanlebras/starnose"
Issues = "https://github.com/eitanlebras/starnose/issues"

[project.scripts]
snose = "starnose.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
